<resources>
    <string name="app_name">MyTasks</string>
    <string name="action_settings">Settings</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="dont_have_accoount">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="task_name">Task name</string>
    <string name="address">Address</string>
    <string name="material_name">Material name</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="created_by">Created by</string>
    <string name="positiv_button_create">CREATE</string>
    <string name="positiv_button_add_item">Add item</string>
    <string name="negative_button_cancel">CANCEL</string>
    <string name="sub_task_or_material">Sub task or Material</string>
    <string name="progress_dialog_loading">Loading...</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_password_does_not_match">Password does not match</string>
    <string name="error_fill_all_fields">Fill all fields</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="progress_dialog_authenticating_with_firebase">Authentication with Firebase...</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\\nAre you sure you\\\'re connected to the internet?</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="oauth2_format">oauth2:%s</string>
    <string name="google_error_auth_with_google">Error authenticating with Google:</string>
    <string name="google_error_network_error">Network error:</string>
    <string name="google_error_recoverable_oauth_error">Recoverable Google OAuth error:</string>
    <string name="add_task_or_material_dialog">AddTaskOrMaterialDialog</string>
    <string name="error_handling_sign_in">Error handling the sign in:</string>
    <string name="sign_in_cancled">The sign in was cancelled. Make sure you\'re connected to the internet and try again.</string>
    <string name="enter_name">Enter your name</string>
    <string name="no_name_entered">No name entered</string>
    <string name="logout">Logout</string>
    <string name="progress_dialog_check_inbox">Check Inbox</string>
    <string name="content_authority">de.boe_dev.mytasks</string>
    <string name="action_remove_task">Remove task</string>
    <string name="dialog_message_are_you_sure_remove_task">Are you sure you want to remove this task?</string>
    <string name="action_edit_task">Edit Task</string>
    <string name="edit_name">Edit name</string>
    <string name="cancel">Cancel</string>
    <string name="new_value">New</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>

    <string-array name="task_spinner">
        <item>Sub Task</item>
        <item>Material</item>
    </string-array>

</resources>
