<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:gravity="center">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_til_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/normal_bottom_margin"
        app:hintTextAppearance="@style/HintText">

        <EditText
            android:id="@+id/login_edit_text_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_til_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/big_bottom_margin"
        app:hintTextAppearance="@style/HintText">

        <EditText
            android:id="@+id/login_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:onClick="login"
        android:text="@string/sign_in"
        android:layout_marginBottom="@dimen/normal_bottom_margin"
        android:background="?attr/colorAccent"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_with_google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_bottom_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_accoount"/>

        <TextView
            android:id="@+id/login_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:onClick="signUp"
            android:textStyle="bold"
            android:text="@string/sign_up"/>


    </LinearLayout>


</LinearLayout>