<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:gravity="center">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_til_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/normal_bottom_margin"
        app:hintTextAppearance="@style/HintText">

        <EditText
            android:id="@+id/create_account_edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding"
            android:hint="@string/enter_name"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_til_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/normal_bottom_margin"
        app:hintTextAppearance="@style/HintText">

        <EditText
            android:id="@+id/create_account_edit_text_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/create_account"
        android:layout_marginBottom="@dimen/normal_bottom_margin" />

</LinearLayout>