<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/toolbar">


        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            class="com.google.android.gms.maps.SupportMapFragment" />

        <ListView
            android:id="@+id/task_detail_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--app:fabSize="normal"-->
        <!--app:elevation="6dp"-->
        <!--app:pressedTranslationZ="12dp"-->
        <!--app:borderWidth="0dp"-->
        <!--android:id="@+id/new_task_fab"-->
        <!--android:onClick="showAddTaskOrMaterialDialog"-->
        <!--android:src="@drawable/icon_add"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="16dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true" />-->

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        app:fab_labelStyle="@style/menu_lables_style"
        app:fab_labelsPosition="left"
        app:fab_addButtonColorNormal="?attr/colorAccent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/icon_remove"
            app:fab_title="@string/remove"
            app:fab_colorNormal="#df4f39"
            app:fab_size="mini"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/icon_edit"
            app:fab_title="@string/edit"
            app:fab_colorNormal="#dfdc39"
            app:fab_size="mini"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/icon_add"
            app:fab_title="@string/new_value"
            app:fab_colorNormal="#89df39"
            app:fab_size="mini"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>